[gd_scene load_steps=9 format=3 uid="uid://cfl2grjnncv8g"]

[ext_resource type="Script" uid="uid://o5yn8b5d4gx5" path="res://scenes/coin/coin.gd" id="1_u0637"]
[ext_resource type="Texture2D" uid="uid://b4w1cberxhyjp" path="res://assets/items/coin.png" id="2_5vuvm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_f38ba"]
atlas = ExtResource("2_5vuvm")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtla7"]
atlas = ExtResource("2_5vuvm")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8afc0"]
atlas = ExtResource("2_5vuvm")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ifod"]
atlas = ExtResource("2_5vuvm")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_4qh87"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f38ba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtla7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8afc0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ifod")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u0637"]
size = Vector2(6, 7)

[node name="Coin" type="Area2D"]
collision_layer = 32
collision_mask = 2
script = ExtResource("1_u0637")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_4qh87")
autoplay = "default"
frame = 1
frame_progress = 0.0162769

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_u0637")

[node name="CollectionTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="Sound" type="AudioStreamPlayer2D" parent="."]

[node name="RemovalTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="CollectionTimer" to="." method="_on_collection_timer_timeout"]
[connection signal="timeout" from="RemovalTimer" to="." method="_on_removal_timer_timeout"]
